--- a/index.html
+++ b/index.html
@@ -501,12 +501,12 @@ Sri Venkateswara College, University of Delhi is organising anti ragging week fr
         </div>
 
         <div class="gallery" id="weekGallery">
-          <img class="reveal" src="https://picsum.photos/seed/ar1/600/400" alt="Anti Ragging Week photo 1" />
-          <img class="reveal" src="https://picsum.photos/seed/ar2/600/400" alt="Anti Ragging Week photo 2" />
-          <img class="reveal" src="https://picsum.photos/seed/ar3/600/400" alt="Anti Ragging Week photo 3" />
-          <div class="ph reveal">Add Photo</div>
-          <div class="ph reveal">Add Photo</div>
-          <div class="ph reveal">Add Photo</div>
+          <img loading="lazy" src="assets/week/1.jpg" alt="Anti Ragging Week photo 1" />
+          <img loading="lazy" src="assets/week/2.jpg" alt="Anti Ragging Week photo 2" />
+          <img loading="lazy" src="assets/week/3.jpg" alt="Anti Ragging Week photo 3" />
+          <img loading="lazy" src="assets/week/4.jpg" alt="Anti Ragging Week photo 4" />
+          <img loading="lazy" src="assets/week/5.jpg" alt="Anti Ragging Week photo 5" />
+          <img loading="lazy" src="assets/week/6.jpg" alt="Anti Ragging Week photo 6" />
         </div>
       </section>
 
