--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   position: absolute;
   inset: 0;
   background: url("assets/welcome/hero.jpg") center / cover no-repeat;
-  opacity: 0.30;        /* 50% transparency */
+  opacity: 0.25;        /* 25% transparency */
   pointer-events: none;
   z-index: 0;          /* behind the grid overlay */
 }
@@ -436,8 +436,21 @@
         <div class="grid-3">
           <article class="msg-card reveal" aria-labelledby="principal-title">
             <h3 class="msg-title" id="principal-title">Principal's Message</h3>
-            <div id="msgPrincipal" class="msg-body">Welcome. The Principal's message will appear here.</div>
-            <div class="msg-sign" id="signPrincipal">— Prof. [Principal Name]</div>
+            <div id="msgPrincipal" class="msg-body">Dear Students,
+
+At Sri Venkateswara College, we take pride in fostering a safe, inclusive, and respectful environment for all. Ragging, in any form, is a grave violation of human dignity and is strictly prohibited by law as well as by our institutional ethos.
+
+Ragging is not a harmless tradition, it is an act that can cause lasting physical, emotional, and psychological harm. Our college has adopted a zero-tolerance policy towards it. Any student found involved in ragging will face strict disciplinary action, including suspension, rustication, and legal proceedings as per the UGC Regulations on Curbing the Menace of Ragging in Higher Educational Institutions, 2009.
+
+I urge every student to uphold the values of empathy, mutual respect, and camaraderie. If you witness or experience any incident of ragging, I strongly encourage you to report it immediately through the Anti-Ragging Portal or directly to the college authorities. Your identity will be kept confidential, and your safety will be ensured.
+
+Together, let us build a campus culture where friendship and mentorship replace fear and intimidation.
+
+Let kindness be our tradition.
+</div>
+            <div class="msg-sign" id="signPrincipal">—Prof. Vajala Ravi
+Principal
+Sri Venkateswara College</div>
             <div class="msg-meta" id="msgPrincipalMeta"></div>
           </article>
 
@@ -448,14 +461,14 @@ Nowadays ragging has reached monstrous proportions with horrifying physical and 
 I would like to caution the juniors to be aware of these rules and reach out to the administration and mentors in the event they face any such issues. I would also like to reassure one and all that at Sri Venkateswara, we hope that all our students do not indulge in any such acts and behave like the upright, courteous and responsible citizens we are training them to be.
 I will end by saying that please students treat everyone, whoever they are with the respect and courtesy you would want to receive. 
 </div>
-            <div class="msg-sign" id="signProctor">— Dr. [Proctor Name]</div>
+            <div class="msg-sign" id="signProctor">— Dr. Nandita</div>
             <div class="msg-meta" id="msgProctorMeta"></div>
           </article>
 
           <article class="msg-card reveal" aria-labelledby="advisor-title">
             <h3 class="msg-title" id="advisor-title">Staff Advisor's Message</h3>
             <div id="msgStaff" class="msg-body">Welcome. The Staff Advisor's message will appear here.</div>
-            <div class="msg-sign" id="signStaff">— Dr. [Staff Advisor Name]</div>
+            <div class="msg-sign" id="signStaff">— Om Prakash Sir</div>
             <div class="msg-meta" id="msgStaffMeta"></div>
           </article>
         </div>
