--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ Nowadays ragging has reached monstrous proportions with horrifying physical and 
 I would like to caution the juniors to be aware of these rules and reach out to the administration and mentors in the event they face any such issues. I would also like to reassure one and all that at Sri Venkateswara, we hope that all our students do not indulge in any such acts and behave like the upright, courteous and responsible citizens we are training them to be.
 I will end by saying that please students treat everyone, whoever they are with the respect and courtesy you would want to receive. 
 </div>
-            <div class="msg-sign" id="signProctor">— Dr. Nandita</div>
+            <div class="msg-sign" id="signProctor">— Prof. Nandita Narayanasamy</div>
             <div class="msg-meta" id="msgProctorMeta"></div>
           </article>
 
