--- a/index.html
+++ b/index.html
@@ -515,8 +515,11 @@ I will end by saying that please students treat everyone, whoever they are with 
 
           <article class="msg-card reveal" aria-labelledby="advisor-title">
             <h3 class="msg-title" id="advisor-title">Staff Advisor's Message</h3>
-            <div id="msgStaff" class="msg-body">Welcome. The Staff Advisor's message will appear here.</div>
-            <div class="msg-sign" id="signStaff">— Om Prakash Sir</div>
+            <div id="msgStaff" class="msg-body">Sri Venkateswara College welcomes freshers with love and respect that remains the base of long lasting friendship and memories for life. “College is where journeys begin, ideas bloom, and friendships grow, ragging destroys all three. As we step into college life, let’s remember one truth: respect is the real welcome. Ragging is not tradition—it is humiliation. Let’s welcome every fresher with dignity, empathy, and respect — because true strength is in creating memories, not in causing fear.
+True seniors are not bullies, they are mentors. True juniors are not victims, they are future leaders.
+Let us pledge today to replace ragging with guidance, laughter, and support. Instead of breaking someone’s confidence, let’s be the reason they feel at home in this new environment.
+Say no to ragging, and yes to dignity, unity, and humanity.</div>
+            <div class="msg-sign" id="signStaff">— Prof. Om Prakash, Staff Advisor</div>
             <div class="msg-meta" id="msgStaffMeta"></div>
           </article>
         </div>
