--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@ Together, let us build a campus culture where friendship and mentorship replace 
 
 Let kindness be our tradition.
 </div>
+            <img loading="lazy" src="assets/messages/principal.jpg" alt="Principal photo" style="display:block; width:96px; height:96px; border-radius:50%; object-fit:cover; border:1px solid var(--border); margin: 8px auto 0;" />
             <div class="msg-sign" id="signPrincipal">—Prof. Vajala Ravi ,
 Principal ,
 Sri Venkateswara College</div>
@@ -509,6 +510,7 @@ Nowadays ragging has reached monstrous proportions with horrifying physical and 
 I would like to caution the juniors to be aware of these rules and reach out to the administration and mentors in the event they face any such issues. I would also like to reassure one and all that at Sri Venkateswara, we hope that all our students do not indulge in any such acts and behave like the upright, courteous and responsible citizens we are training them to be.
 I will end by saying that please students treat everyone, whoever they are with the respect and courtesy you would want to receive. 
 </div>
+            <img loading="lazy" src="assets/messages/proctor.jpg" alt="Proctor photo" style="display:block; width:96px; height:96px; border-radius:50%; object-fit:cover; border:1px solid var(--border); margin: 8px auto 0;" />
             <div class="msg-sign" id="signProctor">— Prof. Nandita Narayanasamy</div>
             <div class="msg-meta" id="msgProctorMeta"></div>
           </article>
@@ -519,6 +521,7 @@ I will end by saying that please students treat everyone, whoever they are with 
 True seniors are not bullies, they are mentors. True juniors are not victims, they are future leaders.
 Let us pledge today to replace ragging with guidance, laughter, and support. Instead of breaking someone’s confidence, let’s be the reason they feel at home in this new environment.
 Say no to ragging, and yes to dignity, unity, and humanity.</div>
+            <img loading="lazy" src="assets/messages/staff-advisor.jpg" alt="Staff Advisor photo" style="display:block; width:96px; height:96px; border-radius:50%; object-fit:cover; border:1px solid var(--border); margin: 8px auto 0;" />
             <div class="msg-sign" id="signStaff">— Prof. Om Prakash, Staff Advisor</div>
             <div class="msg-meta" id="msgStaffMeta"></div>
           </article>
